@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- $Id: pl.xml 699 2012-09-15 11:57:13Z namiltd $ -->
 <!--
 phpSysInfo language file Language: Polish Created by: Damian Pasternok
@@ -299,5 +299,8 @@ phpSysInfo language file Language: Polish Created by: Damian Pasternok
   </expression>
   <expression id="098" name="codepage">
     <exp>Strona kodowa</exp>
+  </expression>
+  <expression id="099" name="details">
+    <exp>Szczegóły</exp>
   </expression>
 </tns:translation>
