@@ -301,4 +301,7 @@ Giancarlo Gil Ottaviani Raduan graduan at gmail.com
   <expression id="098" name="codepage">
     <exp>Code Page</exp>
   </expression>
+  <expression id="099" name="details">
+    <exp>Details</exp>
+  </expression>
 </tns:translation>
