@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- $Id: tw.xml 699 2012-09-15 11:57:13Z namiltd $ -->
 <!--
 phpSysInfo language file Language: Chinese Traditional Created by:
@@ -300,5 +300,8 @@ capriskye::andrew@openlyu.com http://openlyu.com/
   </expression>
   <expression id="098" name="codepage">
     <exp>Code Page</exp>
+  </expression>
+  <expression id="099" name="details">
+    <exp>Details</exp>
   </expression>
 </tns:translation>
